# Rover_2017_2018

./: .gitignore  README.md  ground_station_git_reset.sh  rover_git_reset.sh
cs_capstone_documents/: Readme.md
cs_capstone_documents/design_document/: 0_design_document.tex  1_introduction.tex  2_references.tex  3_glossary.tex  4_design_considerations.tex  5_component_design.tex  5_component_design_1.tex  5_component_design_2.tex  5_component_design_3.tex  5_component_design_4.tex  5_component_design_5.tex  5_component_design_6.tex  5_component_design_7.tex  5_component_design_8.tex  5_component_design_9.tex  6_user_interface_design.tex  7_conclusion.tex  backup_content.tex  bibliography.bib  latexmkrc  makefile
cs_capstone_documents/fall_progress_report/: progress_report.tex
cs_capstone_documents/requirements/: requirements.tex
cs_capstone_documents/spring_final_report/: final_report.tex  latexmkrc  makefile
cs_capstone_documents/spring_midterm_progress_report/: makefile  progress_report.tex
cs_capstone_documents/winter_midterm_progress_report/: progress_report.tex
electrical/: Iris.RUL
electrical/Science Node/: Sensor_Test_Code.ino  hydra_play.ino
electrical/documents/: IONI Tuning.md  circuitmaker_stuff.md  ioni_test_tuning_setup.drc
electrical/firmware/: Readme.md
firmware/: Readme.md
ground_station/: Readme.md  RoverGroundStation.py
mechanical/: drawings.md
rover/: Readme.md  system_statuses
software/: ground_station_setup.sh  rover_setup.sh
software/rover/drive_test/: CMakeLists.txt  package.xml
team documents/: URC Lessons Learned.md
(+284 files in other folders)
